Compiler/tests/errors/constructor_type_wrong.jack
// This file is part of the materials accompanying the book 
// "The Elements of Computing Systems" by Nisan and Schocken, 
// MIT Press. Book site: www.idc.ac.il/tecs
// File name: projects/10/ArrayTest/Main.jack

/** Computes the average of a sequence of integers. */

    
    class Main {

    constructor int new () {
        return this;
    }

    function void Main () {
        return;
    }

}